Keyframes are not display in timeline editor #59933

Closed
opened 2018-12-28 18:37:47 +01:00 by Valentin · 7 comments
Member

System Information
OS: Ubuntu 18.04
GPU: Gtx 970

Blender Version
blender2.8, a4e4d9f0ab, 2018-12-28

Short description of error
Keyframes are not show in the timeline editor when select an object

Exact steps for others to reproduce the error
Blend file :bug_keyframe.blend

  • Select the object "Cube"
  • The keyframe of the object aren't showing in the timeline (there is two location keyframe attached to the cube)

Additional note: To see keyframes again, select another object e.g: a camera and then select the cube again or when the cube is selected right click on the timeline

**System Information** OS: Ubuntu 18.04 GPU: Gtx 970 **Blender Version** blender2.8, a4e4d9f0ab89, 2018-12-28 **Short description of error** Keyframes are not show in the timeline editor when select an object **Exact steps for others to reproduce the error** Blend file :[bug_keyframe.blend](https://archive.blender.org/developer/F6098932/bug_keyframe.blend) * Select the object "Cube" * The keyframe of the object aren't showing in the timeline (there is two location keyframe attached to the cube) Additional note: To see keyframes again, select another object e.g: a camera and then select the cube again or when the cube is selected right click on the timeline
Author
Member

Added subscriber: @Poulpator

Added subscriber: @Poulpator

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB
Brecht Van Lommel was assigned by Sebastian Parborg 2019-01-24 13:22:52 +01:00

I can confirm that the keyframes on the cube does not show up until I have selected an other object when I try to select it in the 3D viewport. However, they do show up when I select the cube in the outliner.

@brecht I'm guessing this is selection logic related, sorry if this is not for you.

I can confirm that the keyframes on the cube does not show up until I have selected an other object when I try to select it in the 3D viewport. However, they do show up when I select the cube in the outliner. @brecht I'm guessing this is selection logic related, sorry if this is not for you.

This issue was referenced by bd64206e1a

This issue was referenced by bd64206e1ac828675aad3b16ffe6f4ecc6e6a409

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @phil123456

Added subscriber: @phil123456

same here, the keys do not appear in the dope sheet, action editor, nor shape key editor,even by pressing home

same here, the keys do not appear in the dope sheet, action editor, nor shape key editor,even by pressing home
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59933
No description provided.