Fix T59933: timeline keyframe display not updating when selecting objects.